--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello-world</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <header>
@@ -11,10 +12,10 @@
     <p>que bom te ver por aqui, Keli</p>
    </header>
    <section>
-    <h2>HTML</h2>
+    <h2 class="texto-um">HTML</h2>
     <p>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web</p>
 
-    <h2>CSS</h2>
+    <h2 class="texto-dois">CSS</h2>
     <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza sua página web</p>
 
     <img src="Olá Mundo.png" alt="">
