--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
    <header>
+
     <h1>Olá Mundo</h1>
-    <p>que bom te ver por aqui, Keli</p>
+    <p>Que bom te ver por aqui, <span id="nome-usuario"> fulano </span></p>
    </header>
-   <section>
+
+   <section class="linha"> 
+
     <h2 class="texto-um">HTML</h2>
     <p>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web</p>
 
@@ -19,9 +22,12 @@
     <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza sua página web</p>
 
     <img src="Olá Mundo.png" alt="">
+    
    </section>
 
    <footer>
+
+    <script src="scripit.js"></script>
     <p>Uma página desenvolvida por Alura Start</p>
    </footer>
 </body>
